llm-d/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: Demo - LLM-d
  labels:
    openshift.io/cluster-monitoring: "true"
  name: llmd-test
